🐛 FIX invisible vertical scroll bar

--- a/src/app.css
+++ b/src/app.css
@@ -26,6 +26,14 @@
         background-color: rgb(11, 11, 14);
         color: rgba(255, 255, 255, 0.75);
         font-family: Sen;
+
+        overflow-y: scroll;
+        scrollbar-width: none;
+        -ms-overflow-style: none;
+    }
+
+    body::-webkit-scrollbar {
+        width: 0px; 
     }
 
 }
